--- a/JHotDraw/.github/workflows/ci_lab.yml
+++ b/JHotDraw/.github/workflows/ci_lab.yml
@@ -4,7 +4,13 @@
 
 name: Java CI
 # Run this workflow every time we do a pull request in our repository
-on: [pull_request]
+on:
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   build:
