--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -40,5 +40,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>   
  </project>
