--- a/JHotDraw/.github/workflows/ci_lab.yml
+++ b/JHotDraw/.github/workflows/ci_lab.yml
@@ -8,9 +8,11 @@ on:
   push:
     branches:
     - master
+    - FillPalette
   pull_request:
     branches:
     - master
+    - FillPalette
 
 jobs:
   build:
