--- a/JHotDraw/.github/workflows/ci_lab.yml
+++ b/JHotDraw/.github/workflows/ci_lab.yml
@@ -1,34 +1,27 @@
-# Tasks:
-# Configure the *.yml to automically build your project for each pull request (use maven).
-# Configure the *.yml to execute tests automatically.
+name: Java CI with Maven
 
-name: Java CI
-# Run this workflow every time we do a pull request in our repository
 on:
   push:
-    branches:
-    - master
-    - FillPalette
+    branches: [FillPalette]
   pull_request:
-    branches:
-    - master
-    - FillPalette
+    branches: [FillPalette]
 
 jobs:
   build:
-    # Set the type of machine to run on
     runs-on: ubuntu-latest
 
     steps:
-        # Checks out a copy of your repository on the ubuntu-latest machine
-      - name: Checkout code
-        uses: actions/checkout@v2
-        # Sets up jdk with specified Java version
+      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-        # Runs the Maven package target in non-interactive mode 
-        # to ensure that the code builds, tests pass, and a package can be created.
+      - name: Cache the Maven packages to speed up build
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
       - name: Build with Maven
         run: mvn -B package --file JHotDraw/pom.xml
