--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -38,11 +38,20 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.tngtech.jgiven</groupId>
-            <artifactId>jgiven-maven-plugin</artifactId>
-            <version>0.15.3</version>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.0</version>
+            <scope>test</scope>
+            <type>jar</type>
         </dependency>
     </dependencies>   
- </project>
+</project>
