--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,5 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file JHotDraw/pom.xml
+      name: test some stuff
+      run: mvn -B test --file JHotDraw/pom.xml
