--- a/JHotDraw/.github/workflows/ci_lab.yml
+++ b/JHotDraw/.github/workflows/ci_lab.yml
@@ -30,3 +30,5 @@ jobs:
         # to ensure that the code builds, tests pass, and a package can be created.
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Run the tests
+        run: mvn -B test --file JHotDraw/pom.xml
