--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -47,5 +47,12 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <type>jar</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>   
  </project>
