--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -38,18 +38,20 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.ledcom.assertj-extensions</groupId>
             <artifactId>assertj-extensions</artifactId>
             <version>1.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.tngtech.jgiven</groupId>
             <artifactId>jgiven-junit</artifactId>
             <version>1.0.0-RC6</version>
-            <type>jar</type>
-            
+            <scope>test</scope>
+            <type>jar</type>           
         </dependency>
     </dependencies>
  </project>
